[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speculative-decoding"
version = "0.1.0"
description = "Speculative decoding for video generation"
readme = "README.md"
authors = [
    {name = "wanzin", email = "wy@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "diffusers>=0.19.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "pillow>=9.0.0",
    "numpy>=1.22.0",
    "imageio>=2.25.0",
    "imageio-ffmpeg>=0.4.8",
    "opencv-python>=4.7.0",
    "torchao>=0.1.0",
    "sentencepiece>=0.1.99",
    "matplotlib>=3.7.0",
    "scikit-image>=0.19.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.setuptools]
packages = ["speculative_decoding"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"