[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmx-speculative-decoding"
version = "0.1.0"
description = "DMX speculative decoding framework for accelerating AI generation across modalities"
readme = "README.md"
authors = [
    {name = "team_dmx", email = "example@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "diffusers>=0.19.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "torchao>=0.1.0",
    "pillow>=9.0.0",
    "numpy>=1.22.0",
    "matplotlib>=3.7.0",
    "imageio>=2.25.0",
    "imageio-ffmpeg>=0.4.8",
    "opencv-python>=4.7.0",
    "sentencepiece>=0.1.99",
    "scikit-image>=0.19.0",
    "scipy>=1.10.0",
    "fastdtw>=0.3.4",
    "outetts>=0.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.setuptools]
packages = ["dmx_speculative_decoding"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"